--- a/ProjetoGC/mainwindow.ui
+++ b/ProjetoGC/mainwindow.ui
@@ -72,7 +72,7 @@
        <item>
         <widget class="QComboBox" name="shaderComboBox">
          <property name="enabled">
-          <bool>false</bool>
+          <bool>true</bool>
          </property>
          <property name="currentIndex">
           <number>0</number>
@@ -122,11 +122,6 @@
            <string>8 - Normal Mapping</string>
           </property>
          </item>
-         <item>
-          <property name="text">
-           <string>9 - Cube Mapping</string>
-          </property>
-         </item>
         </widget>
        </item>
       </layout>
@@ -134,34 +129,6 @@
     </item>
    </layout>
   </widget>
-  <widget class="QMenuBar" name="menuBar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>600</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <widget class="QMenu" name="menuFile">
-    <property name="title">
-     <string>&amp;File</string>
-    </property>
-    <addaction name="actionOpen_File"/>
-    <addaction name="separator"/>
-    <addaction name="actionE_xit"/>
-   </widget>
-   <addaction name="menuFile"/>
-  </widget>
-  <widget class="QStatusBar" name="statusBar"/>
-  <action name="actionOpen_File">
-   <property name="text">
-    <string>&amp;Open...</string>
-   </property>
-   <property name="shortcut">
-    <string>Ctrl+O</string>
-   </property>
-  </action>
   <action name="actionE_xit">
    <property name="text">
     <string>E&amp;xit</string>
@@ -192,38 +159,6 @@
  </customwidgets>
  <resources/>
  <connections>
-  <connection>
-   <sender>actionOpen_File</sender>
-   <signal>triggered()</signal>
-   <receiver>openGLWidget</receiver>
-   <slot>showFileOpenDialog()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>-1</x>
-     <y>-1</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>317</x>
-     <y>207</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>openGLWidget</sender>
-   <signal>statusBarMessage(QString)</signal>
-   <receiver>statusBar</receiver>
-   <slot>showMessage(QString)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>317</x>
-     <y>207</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>317</x>
-     <y>392</y>
-    </hint>
-   </hints>
-  </connection>
   <connection>
    <sender>shaderComboBox</sender>
    <signal>currentIndexChanged(int)</signal>
