--- a/ProjetoGC/resources.qrc
+++ b/ProjetoGC/resources.qrc
@@ -25,5 +25,9 @@
         <file>3d/cubo.off</file>
         <file>3d/star.off</file>
         <file>3d/piso.off</file>
+        <file>3d/amarelo.png</file>
+        <file>3d/cinza.png</file>
+        <file>3d/roxo.png</file>
+        <file>3d/vermelho.png</file>
     </qresource>
 </RCC>
